--- a/VidCoder/Resources/Translations/EncodingRes.ka.resx
+++ b/VidCoder/Resources/Translations/EncodingRes.ka.resx
@@ -841,7 +841,7 @@ HQDN3D-ი ადაპტური დაბალი ხარისხის 
     <value>ფერის სივრცე:</value>
   </data>
   <data name="ChromaSmoothToolTip" xml:space="preserve">
-    <value>ამცირებს ქრომის წერტილებს, ცისარტყელის და სხვა ცნობილ ვიზუალურ ხარვეზებს. გამოსადეგია მრავალჯერადი ფერების პრობლების აღმოსაფრხველად, განსაკუთრებით ანალოგიური პატარა წყაროს განზომილების შემცველობისთვის, მაგალითად დაბალი ხარისხის DVD და VHS-ის წყაროსთვის. სიბაცის/გაუმჯობესების ალგორითმი, იგივეა რასაც იყენებს სიბაცის ფილტრი.</value>
+    <value>ამცირებს ქრომის წერტილებს, ცისარტყელის და სხვა ცნობილ ვიზუალურ ხარვეზებს. გამოსადეგია მრავალჯერადი ფერების პრობლემის აღმოსაფრხველად, განსაკუთრებით ანალოგიური პატარა წყაროს განზომილების შემცველობისთვის, მაგალითად დაბალი ხარისხის DVD და VHS-ის წყაროსთვის. სიბაცის/გაუმჯობესების ალგორითმი, იგივეა რასაც იყენებს სიბაცის ფილტრი.</value>
   </data>
   <data name="ConstrainToOneAxisCheckBox" xml:space="preserve">
     <value>ვიზუალიზირების დაძალება</value>
