--- a/VidCoder/Resources/Translations/PickerRes.es.resx
+++ b/VidCoder/Resources/Translations/PickerRes.es.resx
@@ -397,12 +397,27 @@ Todas: incluye todos los subtítulos.</value>
     <comment>Label for the option to automatically delete source files on completion.</comment>
   </data>
   <data name="HeightFilterCheckBox" xml:space="preserve">
-    <value>Elegir sólo títulos con una altura de</value>
+    <value>Elegir solo títulos con una altura</value>
     <comment>Label before the UI to pick the title height limitation. For example, it might read "Pick only titles with height [ &gt; ] [ 480 ]"</comment>
   </data>
-  
-  
-  
-  
-  
+  <data name="HeightFilterCheckBoxAutomationName" xml:space="preserve">
+    <value>Filtrar títulos por altura</value>
+    <comment>Screen reader text for the height filter checkbox</comment>
+  </data>
+  <data name="HeightFilterValueAutomationName" xml:space="preserve">
+    <value>Valor del filtro de altura</value>
+    <comment>Screen reader text for the height filter value</comment>
+  </data>
+  <data name="WidthFilterCheckBox" xml:space="preserve">
+    <value>Elegir solo títulos con una anchura</value>
+    <comment>Label before the UI to pick the title width limitation. For example, it might read "Pick only titles with width [ &gt; ] [ 640 ]"</comment>
+  </data>
+  <data name="WidthFilterCheckBoxAutomationName" xml:space="preserve">
+    <value>Filtrar títulos por anchura</value>
+    <comment>Screen reader text for the width filter checkbox</comment>
+  </data>
+  <data name="WidthFilterValueAutomationName" xml:space="preserve">
+    <value>Valor de filtro de anchura</value>
+    <comment>Screen reader text for the width filter value</comment>
+  </data>
 </root>
