--- a/VidCoder/Resources/Translations/CommonRes.ca.resx
+++ b/VidCoder/Resources/Translations/CommonRes.ca.resx
@@ -118,234 +118,234 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="AboutLicense" xml:space="preserve">
-    <value>Bu program ücretsiz bir yazılımdır; Özgür Yazılım Vakfı tarafından yayımlanan GNU Genel Kamu Lisansı sürüm 2 veya (isteğe bağlı) daha sonraki bir sürümün hükümlerine göre yeniden dağıtabilir ve / veya değiştirebilirsiniz.
+    <value>Aquest programa és programari lliure; podeu redistribuir-lo o modificar-lo sota els termes de la Llicència Pública General GNU tal com publica la Free Software Foundation; ja sigui la versió 2 de la Llicència, o (si ho preferiu) qualsevol versió posterior.
 
-Bu program faydalı olacağı umuduyla dağıtılmaktadır ama HERHANGİ BİR GARANTİSİ YOKTUR; TİCARETE veya BELİRLİ BİR AMACA UYGUNLUĞUNUN zımmi garantisi dahi yoktur. Daha fazla bilgi için GNU Genel Kamu Lisansına bakınız.
+Aquest programa es distribueix amb l'esperança que sigui útil, però SENSE CAP GARANTIA; ni tan sols la garantia implícita de COMERCIALITZACIÓ o ADEQUACIÓ PER A UN PROPÒSIT PARTICULAR. Vegeu la Llicència Pública General GNU per a més detalls.
 
-GNU Genel Kamu Lisansının tam kopyası bu programla birlikte verilmiştir.</value>
+S'ha inclòs una còpia completa de la Llicència Pública General GNU juntament amb aquest programa.</value>
   </data>
   <data name="BurnedSubtitleToolTip" xml:space="preserve">
-    <value>Altyazıyı filmin üzerine gömün. Gömülü altyazı film izlerken devre dışı bırakılamaz.</value>
+    <value>Incrusta els subtítols a la imatge. Els subtítols incrustats no es poden desactivar durant la reproducció del vídeo.</value>
   </data>
   <data name="DefaultSubtitleToolTip" xml:space="preserve">
-    <value>Bu altyazıyı varsayılan olarak seç. Başka bir altyazı seçilene kadar oynatma esnasında bu altyazı gösterilecektir.</value>
+    <value>Fes que aquesta pista de subtítols sigui la predeterminada. Es mostrarà durant la reproducció del vídeo fins que se'n triï una altra.</value>
   </data>
   <data name="ForcedSubtitleToolTip" xml:space="preserve">
-    <value>Altyazılardan sadece zorunlu altyazı(ları) göster. Bu genellikle az miktarda yabancı diyalog parçaları demektir.</value>
+    <value>Mostra només els subtítols forçats de les pistes de subtítols. Normalment fa referència a petits fragments de diàleg en una altra llengua.</value>
   </data>
   <data name="OffsetSubtitleToolTip" xml:space="preserve">
-    <value>Verilen altyazıların gösterimini öne alma veya geciktirme için gereken süre.</value>
+    <value>El temps que cal avançar o retardar l'aparició dels subtítols en qüestió.</value>
   </data>
   <data name="QueueColumnNameRange" xml:space="preserve">
-    <value>Aralık</value>
+    <value>Interval</value>
     <comment>The label for the queue column that specifies what portion of the video to encode. (Like 25:23 - 37:50)</comment>
   </data>
   <data name="QueueColumnNameDestination" xml:space="preserve">
-    <value>Hedef</value>
+    <value>Destinació</value>
   </data>
   <data name="QueueColumnNameSource" xml:space="preserve">
-    <value>Kaynak</value>
+    <value>Fitxer d'origen</value>
   </data>
   <data name="QueueColumnNameTitle" xml:space="preserve">
-    <value>Başlık</value>
+    <value>Títol</value>
     <comment>The label for the queue column that shows the title number. For DVDs or Blu-rays this identifies which title on the disc will be encoded. For files this is usually 1.</comment>
   </data>
   <data name="QueueColumnNameAudioQuality" xml:space="preserve">
-    <value>Ses Kalitesi</value>
+    <value>Qualitat d'àudio</value>
   </data>
   <data name="QueueColumnNameAudioEncoder" xml:space="preserve">
-    <value>Ses Kodlayıcı</value>
+    <value>Codificador d'àudio</value>
   </data>
   <data name="QueueColumnNameVideoEncoder" xml:space="preserve">
-    <value>Video Kodlayıcı</value>
+    <value>Codificador de vídeo</value>
   </data>
   <data name="QueueColumnNameVideoQuality" xml:space="preserve">
-    <value>Video Kalitesi</value>
+    <value>Qualitat de vídeo</value>
   </data>
   <data name="QueueEtaToolTip" xml:space="preserve">
-    <value>Kuyruktaki tüm işler için kalan tahmini süre.</value>
+    <value>Temps estimat que falta per acabar totes les tasques de la cua.</value>
   </data>
   <data name="QueueColumnNameDuration" xml:space="preserve">
-    <value>Süre</value>
+    <value>Duració</value>
   </data>
   <data name="ForeignAudioSearchToolTip" xml:space="preserve">
-    <value>Altyazı içerisindeki muhtemel yabancı diyalog parçalarını arar. Özellikle kendi ana dilinizde olan filmler için uygundur.</value>
+    <value>Cerca la pista de subtítols que podria tenir fragment en una altra llengua. És l'opció recomanada per a les pel·lícules que estan en la vostra llengua materna.</value>
   </data>
   <data name="Default" xml:space="preserve">
-    <value>Varsayılan</value>
+    <value>Per defecte</value>
     <comment>Usually used in settings, when there is a default option. For example for Decomb there is Off, Default, Fast, Bob and Custom.</comment>
   </data>
   <data name="Custom" xml:space="preserve">
-    <value>Özel</value>
+    <value>Personalitzat</value>
     <comment>Usually used in settings, when there is a default option. For example for Decomb there is Off, Default, Fast, Bob and Custom.</comment>
   </data>
   <data name="Browse" xml:space="preserve">
-    <value>Gözat…</value>
+    <value>Navega...</value>
   </data>
   <data name="Delete" xml:space="preserve">
-    <value>Sil</value>
+    <value>Elimina</value>
   </data>
   <data name="PreviewLabel" xml:space="preserve">
-    <value>Önizleme</value>
+    <value>Previsualització</value>
   </data>
   <data name="Automatic" xml:space="preserve">
-    <value>Otomatik</value>
+    <value>Automàtic</value>
   </data>
   <data name="Off" xml:space="preserve">
-    <value>Kapalı</value>
+    <value>Desactivat</value>
     <comment>Usually used in settings, when there is a default option. For example for Decomb there is Off, Default, Fast, Bob and Custom.</comment>
   </data>
   <data name="All" xml:space="preserve">
-    <value>Tümü</value>
+    <value>Tots</value>
   </data>
   <data name="StreamChoice" xml:space="preserve">
-    <value>Akış {0}</value>
+    <value>Flux {0}</value>
     <comment>Used in the encoding settings dialog to mark which audio stream an audio encoding is targeting. By default the encoding works on all streams but you can target it to affect only the first stream, in which case it would label it "Stream 1"</comment>
   </data>
   <data name="Ok" xml:space="preserve">
-    <value>Tamam</value>
+    <value>Entesos</value>
   </data>
   <data name="Cancel" xml:space="preserve">
-    <value>İptal</value>
+    <value>Cancel·la</value>
   </data>
   <data name="Disabled" xml:space="preserve">
-    <value>Devre Dışı</value>
+    <value>Desactivat</value>
   </data>
   <data name="Remove" xml:space="preserve">
-    <value>Kaldır</value>
+    <value>Lleva</value>
   </data>
   <data name="Copy" xml:space="preserve">
-    <value>Kopyala</value>
+    <value>Copia</value>
   </data>
   <data name="Yes" xml:space="preserve">
-    <value>Evet</value>
+    <value>Sí</value>
   </data>
   <data name="No" xml:space="preserve">
-    <value>Hayır</value>
+    <value>No</value>
   </data>
   <data name="CouldNotAccessDirectoriesError" xml:space="preserve">
-    <value>Aşağıdaki dizinlere erişilemedi:</value>
+    <value>No es pot accedir als directoris següents:</value>
   </data>
   <data name="None" xml:space="preserve">
-    <value>Hiçbiri</value>
+    <value>Cap</value>
   </data>
   <data name="Succeeded" xml:space="preserve">
-    <value>Başarılı</value>
+    <value>S'ha completat</value>
   </data>
   <data name="Failed" xml:space="preserve">
-    <value>Başarısız</value>
+    <value>S'ha produït un error</value>
   </data>
   <data name="FilePickerExtTemplate" xml:space="preserve">
-    <value>{0} Dosya</value>
+    <value>{0} fitxers</value>
   </data>
   <data name="QueueColumnNamePreset" xml:space="preserve">
-    <value>Önayar</value>
+    <value>Valors predefinits</value>
   </data>
   <data name="Success" xml:space="preserve">
-    <value>Başarılı</value>
+    <value>S'ha completat</value>
   </data>
   <data name="ConfirmDialogTitle" xml:space="preserve">
-    <value>Onayla</value>
+    <value>Confirma</value>
   </data>
   <data name="FileFailureErrorMessage" xml:space="preserve">
-    <value>Dosya işlemi tamamlanamadı.</value>
+    <value>No s'ha pogut completar l'operació del fitxer.</value>
   </data>
   <data name="FileFailureErrorTitle" xml:space="preserve">
-    <value>Dosya işlemi hatası</value>
+    <value>S'ha produït un error en l'operació del fitxer</value>
   </data>
   <data name="OverrideNameFormatCheckBox" xml:space="preserve">
-    <value>Adlandırma biçimini geçersiz kıl:</value>
+    <value>Substitueix el format de nomenclatura:</value>
   </data>
   <data name="OutputToSourceDirCheckBox" xml:space="preserve">
-    <value>Mümkünse kaynak dizine çıkar</value>
+    <value>Escriu el fitxer de sortida a la carpeta d'origen, si es pot</value>
   </data>
   <data name="PreserveFolderStructureCheckBox" xml:space="preserve">
-    <value>Çoklu kodlamalarda klasör yapısını koru</value>
+    <value>Conserva l'estructura de carpetes en les codificacions per lots</value>
   </data>
   <data name="PreserveFolderStructureToolTip" xml:space="preserve">
-    <value>Dosyalarla dolu bir klasörü kodlarsanız, kodlanmış sürümler kaynak dizin yapısına uyacak şekilde alt klasörlere konacaktır.</value>
+    <value>Si codifiqueu una carpeta plena de fitxers, les versions codificades es desaran en subcarpetes perquè coincideixin amb l'estructura de carpetes d'origen.</value>
   </data>
   <data name="DismissMessage" xml:space="preserve">
-    <value>Mesajı kapat</value>
+    <value>Descarta el missatge</value>
     <comment>Appears as a tooltip on inline, dismissable messages</comment>
   </data>
   <data name="PresetFileFilter" xml:space="preserve">
-    <value>VidCoder Önayar Dosyası</value>
+    <value>Fitxer de valors predefinits del VidCoder</value>
     <comment>File dialog description of a .vjpreset file: JSON file that stores an exported preset.</comment>
   </data>
   <data name="QueueFileFilter" xml:space="preserve">
-    <value>VidCoder Kuyruk Dosyası</value>
+    <value>Fitxer de la cua del VidCoder</value>
     <comment>File dialog description of a .vjqueue file: JSON file that stores an exported queue.</comment>
   </data>
   <data name="First" xml:space="preserve">
-    <value>İlk</value>
+    <value>Primer</value>
     <comment>Choice to pick the first item in a list, like audio or subtitle tracks.</comment>
   </data>
   <data name="DuplicateTrack" xml:space="preserve">
-    <value>Bu parçayı çoğalt</value>
+    <value>Duplica aquesta pista</value>
     <comment>Tip to duplicate the audio or subtitle track.</comment>
   </data>
   <data name="RemoveTrack" xml:space="preserve">
-    <value>Bu parçayı kaldır</value>
+    <value>Lleva aquesta pista</value>
     <comment>Tip for button to remove the audio or subtitle track.</comment>
   </data>
   <data name="SelectedOverTotalAudioTracksFormat" xml:space="preserve">
-    <value>{0}/{1} ses parçası(ları)</value>
+    <value>{0}/{1} pistes d'àudio</value>
     <comment>{0} is the number of selected audio tracks and {1} is the number of total tracks on the source.</comment>
   </data>
   <data name="SelectedOverTotalSubtitleTracksFormat" xml:space="preserve">
-    <value>{0}/{1} altyazı(lar)</value>
+    <value>{0}/{1} pistes de subtítols</value>
     <comment>{0} is the number of selected subtitle tracks and {1} is the number of total tracks on the source.</comment>
   </data>
   <data name="NumberBoxIncreaseButtonAutomationTextFormat" xml:space="preserve">
-    <value>{0} Artır</value>
+    <value>{0}: augmenta</value>
     <comment>Automation text for the increase button on the number box.
 {0} - The name of the value the control is changing, for example "width"</comment>
   </data>
   <data name="NumberBoxDecreaseButtonAutomationTextFormat" xml:space="preserve">
-    <value>{0} Azalt</value>
+    <value>{0}: redueix</value>
     <comment>Automation text for the decrease button on the number box.
 {0} - The name of the value the control is changing, for example "width"</comment>
   </data>
   <data name="OpenSplitButtonAutomationName" xml:space="preserve">
-    <value>Bölme düğmesini aç</value>
+    <value>Obre el botó de particions</value>
     <comment>Automation name for screen readers for the "open" arrow on a split button</comment>
   </data>
   <data name="Unknown" xml:space="preserve">
-    <value>Bilinmiyor</value>
+    <value>Desconegut</value>
     <comment>Used when a value is not known.</comment>
   </data>
   <data name="DefaultLabel" xml:space="preserve">
-    <value>Varsayılan:</value>
+    <value>Per defecte:</value>
   </data>
   <data name="QueueColumnNameAudioTracks" xml:space="preserve">
-    <value>Ses Parçaları</value>
+    <value>Pistes d'àudio</value>
   </data>
   <data name="QueueColumnNameCropping" xml:space="preserve">
-    <value>Kırpma</value>
+    <value>Escapça</value>
   </data>
   <data name="QueueColumnNameOutputSize" xml:space="preserve">
-    <value>Çıktı Boyutu</value>
+    <value>Mida del fitxer de sortida</value>
   </data>
   <data name="QueueColumnNameSubtitleTracks" xml:space="preserve">
-    <value>Altyazı Parçaları</value>
+    <value>Pistes de subtítols</value>
   </data>
   <data name="Manual" xml:space="preserve">
-    <value>Elle</value>
+    <value>Manual</value>
     <comment>Shown when something has been set manually</comment>
   </data>
   <data name="FileNoLongerExists" xml:space="preserve">
-    <value>Dosya artık yok.</value>
+    <value>El fitxer ja no existeix.</value>
   </data>
   <data name="MegabytesAbbreviation" xml:space="preserve">
     <value>MB</value>
     <comment>Abbreviation for megabytes</comment>
   </data>
   <data name="Enabled" xml:space="preserve">
-    <value>Etkin</value>
+    <value>Activat</value>
   </data>
   <data name="Close" xml:space="preserve">
-    <value>Kapat</value>
+    <value>Tanca</value>
     <comment>Label to close a window or item.</comment>
   </data>
 </root>
